<resources>
    <string name="app_name">Heung</string>
    <string name="write">작성</string>
    <string name="upload">등록</string>
    <string name="title">제목</string>
    <string name="search">검색</string>
    <string name="notice">공연 알림</string>
    <string name="detail">공연 정보 세부사항</string>
    <string name="place">장소</string>
    <string name="intro">소개글</string>
    <string name="modify">수정</string>
    <string name="delete">삭제</string>
    <string name="cancel">취소</string>
    <string name="nickname">닉네임</string>
    <string name="post">게시글</string>
    <string name="date">날짜</string>
    <string name="content">내용</string>
    <string name="like">좋아요</string>
    <string name="comment">댓글</string>
    <string name="complete">완료</string>
    <string name="popular">인기 게시글</string>
    <string name="create">생성</string>
    <string name="posting">게시판</string>
    <string name="back">돌아가기</string>
    <string name="recruitEnd">모집 종료 시간</string>
    <string name="recruitReq">모집 신청</string>
    <string name="recruit">모집글</string>
    <string name="buskingR">버스킹</string>
    <string name="classR">클래스</string>
    <string name="filter">필터</string>
    <string name="type">종류</string>
    <string name="period">기간</string>
    <string name="number">모집인원</string>
    <string name="nicknameChange">닉네임 변경</string>
    <string name="withdrawal">회원탈퇴</string>
    <string name="performName">공연 이름</string>
    <string name="startTime">시작 시간</string>
    <string name="all">최근 게시글</string>
    <string name="start">시작하기</string>
    <string name="endTime">끝나는 시간</string>
    <string name="commentCnt">댓글수</string>
    <string name="logout">로그아웃</string>
    <string name="more">더보기></string>
    <string name="regist">공연 정보 등록</string>
    <string name="location">현재 위치</string>
    <string name="curr">현재 참여자 수</string>
    <string name="maximum">최대 참여자 수</string>
    <string name="sessionType">세션 타입</string>
    <string name="classType">클래스 타입</string>
    <string name="contact">연락처</string>
    <string name="email_phone">이메일/전화번호</string>
    <string name="setting">세팅</string>
    <string name="lang_setting">언어 설정</string>
    <string name="extra_setting">기타 설정</string>
    <string name="app_setting">앱 설정</string>
    <string name="deadline">마감날짜: </string>
    <string name="contact2">연락처: </string>
    <string name="participate">참여자 수: </string>
    <string name="no_popular">인기 게시글이 없습니다.</string>

    <string name="Main">메인</string>
    <string name="Recruit">모집</string>
    <string name="Map">지도</string>
    <string name="Cal">달력</string>
    <string name="Prof">프로필</string>

    <string name="darkmode">다크모드</string>
    <string name="defaultmode">기본값</string>
    <string name="ko">Korean</string>
    <string name="en">English</string>

    <string name="google_maps_api_key">AIzaSyA31kkd5bVzb1DHgUL0YktIXMTXFhhi_4U</string>
    <string name="kakao_app_key">6de2823164e42a1f96eabbc998a1feb8</string>
    <string name="kakao_app_key2">kakao6de2823164e42a1f96eabbc998a1feb8</string>

    <string name="Hello_example">ex) 안녕하세요</string>
    <string name="Date_example">2021.01.01(일)</string>
    <string name="Time_example">오후 12:00</string>
    <string name="Place_example">ex) 오이도 빨간등대 앞</string>
    <string name="Comment_example">댓글을 입력해주세요</string>
    <string name="Reply_example">대댓글을 입력해주세요</string>
    <string name="Content_example">내용을 입력해주세요</string>
    <string name="Search_example">검색할 행정동을 입력하세요</string>
    <string name="Write_location">장소 입력하기</string>
    <string name="Write_intro">소개글 입력하기</string>
    <string name="within">25자 이내로 작성</string>
    <string name="Time_plan">시간 추가하기</string>
    <string name="Cal_title">ex) 버스킹</string>
    <string name="Cal_cont">어떤 공연인가요?</string>
    <string name="greeting">Heung에서 시흥시 주민들과 버스킹과 클래스를 결성하고,\n                      음악 커뮤니티까지 즐겨보세요.</string>

    <string-array name="items">
        <item>전체</item>
        <item>공연장</item>
        <item>대여점</item>
        <item>강의실</item>
    </string-array>

</resources>