<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:padding="8dp"
        android:src="@drawable/arrow_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/darkModeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="toggleDarkMode"
            android:text="@string/darkmode" />

        <Button
            android:id="@+id/defaultModeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="setDefaultMode"
            android:text="@string/defaultmode" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_quit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/withdrawal"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_korean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ko" />

        <Button
            android:id="@+id/button_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/en" />

    </LinearLayout>

</LinearLayout>
