<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_schedule_add_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:includeFontPadding="false"
        android:text="@string/regist"
        android:textColor="#474c51"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.351"
        app:layout_constraintStart_toEndOf="@+id/btn_back"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:background="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/clear" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_schedule_add_description">

        <TextView
            android:id="@+id/tv_schedule_add_what"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/Cal_cont"
            android:textColor="#474c51"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/cal_title"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/cal_title"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/Cal_title"
            android:includeFontPadding="false"
            android:paddingStart="12dp"
            android:textColor="#2e3236"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_schedule_add_what" />

        <TextView
            android:id="@+id/tv_schedule_add_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:includeFontPadding="false"
            android:text="@string/Time_plan"
            android:textColor="#474c51"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/cal_title"
            app:layout_constraintTop_toBottomOf="@id/cal_title" />

        <FrameLayout
            android:id="@+id/fl_add_timebox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="@id/tv_schedule_add_time"
            app:layout_constraintTop_toBottomOf="@id/tv_schedule_add_time">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_schedule_time_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#fdfeff"
                    android:paddingStart="158dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_time_end_boxline" />

                <ImageView
                    android:id="@+id/iv_schedule_time_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/iv_schedule_time_end"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_time_start_boxline" />

                <TextView
                    android:id="@+id/startDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="12dp"
                    android:includeFontPadding="false"
                    android:text="@string/Date_example"
                    android:textColor="#a0a4a8"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@id/iv_schedule_time_start"
                    app:layout_constraintTop_toTopOf="@id/iv_schedule_time_start" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_timepicker1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:layout_marginTop="4dp"
                    app:layout_constraintStart_toStartOf="@id/iv_schedule_time_start"
                    app:layout_constraintTop_toBottomOf="@id/startDate">

                    <TextView
                        android:id="@+id/startTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/Time_example"
                        android:includeFontPadding="false"
                        android:textColor="#a0a4a8"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/endDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="12dp"
                    android:includeFontPadding="false"
                    android:text="@string/Date_example"
                    android:textColor="#a0a4a8"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/iv_schedule_time_start"
                    app:layout_constraintTop_toTopOf="@id/iv_schedule_time_end" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_timepicker2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="40dp"
                    app:layout_constraintEnd_toEndOf="@id/iv_schedule_time_end"
                    app:layout_constraintTop_toBottomOf="@id/endDate">

                    <TextView
                        android:id="@+id/endTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/Time_example"
                        android:includeFontPadding="false"
                        android:textColor="#a0a4a8"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>

        <TextView
            android:id="@+id/tv_cal_add_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:includeFontPadding="false"
            android:text="@string/Write_location"
            android:textColor="#474c51"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tv_schedule_add_time"
            app:layout_constraintTop_toBottomOf="@id/fl_add_timebox" />

        <EditText
            android:id="@+id/cal_location"
            android:layout_width="208dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"

            android:hint="@string/Place_example"
            android:includeFontPadding="false"
            android:paddingStart="12dp"
            android:textColor="#2e3236"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/tv_cal_add_location"
            app:layout_constraintTop_toBottomOf="@id/tv_cal_add_location" />

        <TextView
            android:id="@+id/tv_cal_add_memo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:includeFontPadding="false"
            android:text="@string/Write_intro"
            android:textColor="#474c51"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/cal_location"
            app:layout_constraintTop_toBottomOf="@id/cal_location" />

        <TextView
            android:id="@+id/tv_schedule_add_memo_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"

            android:layout_marginTop="22dp"
            android:includeFontPadding="false"
            android:text="@string/within"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/tv_cal_add_memo"
            app:layout_constraintTop_toBottomOf="@id/cal_location" />

        <EditText
            android:id="@+id/cal_memo"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:hint="@string/Hello_example"
            android:includeFontPadding="false"
            android:paddingStart="12dp"
            android:textColor="#2e3236"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/tv_cal_add_memo"
            app:layout_constraintTop_toBottomOf="@id/tv_cal_add_memo" />

        <Button
            android:id="@+id/cal_save"
            android:layout_width="320dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/regist"
            android:backgroundTint="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cal_memo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
